<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('like_blog', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->constrained('users', 'id')
                ->cascadeOnUpdate()->cascadeOnDelete();
            $table->foreignId('blog_id')->constrained('blog', 'id')
                ->cascadeOnUpdate()->cascadeOnDelete();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('like_blog');
    }
};
